Fri Dec 15 12:06:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzDatabases now autoflush after 1000 changes.

Fri Dec 15 11:40:37 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix segfault in quartz_table

Fri Dec 15 11:23:15 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed begin/end_session() from quartztest

Thu Dec 14 19:19:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Done todo item: For writable databases, make the behaviour currently
	  obtained by calling begin_session() and later end_session() the
	  default behaviour.  If users want the changes to be applied
	  immediately following a change, they should call flush().

Thu Dec 14 17:48:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix problem with recalc_maxweight() not being called before a
	  get_maxweight() in multimatch.cc if a node prunes at the top level,
	  since recalculate_w_max wasn't being checked at this point.
	  Introduced helper function getorrecalc_maxweight() to tidy this up.

	* Tidy up Asserts in common/netutils.h.

Thu Dec 14 17:11:17 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Adjusted todo.xml

Thu Dec 14 16:21:27 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed handling of OmDatabaseModifiedError in the API - it's
	  up to the users to know what to do.  Disabled quartzoverwrite2
	  as it's now inappropriate.
	
	* Added OmDatabase::reopen() to help them do so.

	* Adjusted todo.xml

Thu Dec 14 14:38:39 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added another quoting regression test.

Thu Dec 14 14:36:53 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed the quoting _again_, since it broke with backslashes.

Thu Dec 14 12:49:58 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix problems with recalculation of maxweight in postlists, causing