@@ -35,6 +35,12 @@ my %field;
 my ($preamble, $postamble, $table_begin, $table_end);
 
 my $text = 0;
+my $filter_release = "";
+if ($ARGV[0] eq '--release') {
+   shift @ARGV;
+   $filter_release = shift @ARGV;
+}
+
 if ($ARGV[0] eq '--text') {
    shift @ARGV;
    $text = 1;
@@ -119,6 +125,13 @@ sub handle_end {
     my $xpat = shift;
     my $tag = shift;
     $tag eq 'todoitem' or return;
+    if ($filter_release) {
+	if ($filter_release eq '*') {
+	    if ($field{'release'} eq '') { return; }
+	} else {
+	    if ($filter_release ne $field{'release'}) { return; }
+	}
+    }
     if ($text) {
         print join "|", map substr("$field{$_} ", 0, 1), qw(priority difficulty owner);
         my $f = Text::Format->new({columns => 54, firstIndent => 0});
